# geoImages

./: CMakeLists.txt  GeoTIFF.cpp  GeoTIFF.h  GeoTIFFTest.cpp  GeoTIFFTest.h  geoImage.cpp  geoImage.h  main.cpp
testData/GeoTIFF/: EDKA.tiff
